--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,10 @@
-Package: ssr-flu
+Package: ssrFlu
 Title: Runs state-space reconstruction for CDC flu challenge
 Version: 0.0.1
-Authors@R: person("Evan", "Ray", , "elray@umass.edu", role = c("aut", "cre")), person("Nicholas", "Reich", "G", "elray@umass.edu", role = c("aut"))
+Authors@R: c(
+    person(c("Evan", "L."), "Ray", , "elray@umass.edu", role = c("aut", "cre")), 
+    person(c("Nicholas", "G."), "Reich", , "elray@umass.edu", role = c("aut"))
+    )
 Description: Runs state-space reconstruction for CDC flu challenge
 Depends: R (>= 3.0.2)
 License: GPLv3
